--- a/index.html
+++ b/index.html
@@ -4,37 +4,38 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>时间是神奇的</title>
-    <p>
-    	<img src="static/img/psb.jpg"  width="296" height="auto"/>
-    </p>
-    <p>
-    	<img src="static/img/psb (2).jpg"  width="296" height="auto"/>
-    </p>
-    <p>
-    	<img src="static/img/psb (1).jpg"  width="296" height="auto"/>
-    </p>
-    <p>
-    	<img src="static/img/psb (4).jpg"  width="296" height="auto"/>
-    </p>
-    <p>
-    	<img src="static/img/psb (3).jpg"  width="296" height="auto"/>
-    </p>
-    <p>
-    	<img src="static/img/psb (6).jpg"  width="296" height="auto"/>
-    </p>
-    <p>
-    	<img src="static/img/psb (7).jpg"  width="296" height="auto"/>
-    </p>
-    <p>
-    	<img src="static/img/psb (8).jpg"  width="296" height="auto"/>
-    </p>
-     <p>
-    	<img src="static/img/psb (10).jpg"  width="296" height="auto"/>
-    </p>
-    <p>
-    	<img src="static/img/psb (9).jpg"  width="296" height="auto"/>
-    </p>
-   
+    <div align="center">
+        <p>
+            <img src="static/img/psb.jpg"  width="296" height="auto"/>
+        </p>
+        <p>
+            <img src="static/img/psb (2).jpg"  width="296" height="auto"/>
+        </p>
+        <p>
+            <img src="static/img/psb (1).jpg"  width="296" height="auto"/>
+        </p>
+        <p>
+            <img src="static/img/psb (4).jpg"  width="296" height="auto"/>
+        </p>
+        <p>
+            <img src="static/img/psb (3).jpg"  width="296" height="auto"/>
+        </p>
+        <p>
+            <img src="static/img/psb (6).jpg"  width="296" height="auto"/>
+        </p>
+        <p>
+            <img src="static/img/psb (7).jpg"  width="296" height="auto"/>
+        </p>
+        <p>
+            <img src="static/img/psb (8).jpg"  width="296" height="auto"/>
+        </p>
+        <p>
+            <img src="static/img/psb (10).jpg"  width="296" height="auto"/>
+        </p>
+        <p>
+            <img src="static/img/psb (9).jpg"  width="296" height="auto"/>
+        </p>
+    </div>
 </head>
 <body>
 	
